@@ -50,14 +50,26 @@ elements. The following creates an integer variable with the odd numbers in
 
  odd_number = int_var(1,3,5,7,9)
 
+Matrices can be created using @Model#int_var_matrix@ (returns an instance of
+Matrix). 
+
+ number_matrix = int_var_matrix(5, 4, 0..9) # 5 rows and 4 columns.
+
+Additional custom enumerations containing variables can be used, but they have
+to be wrapped using @Model#wrap_enum@ first.
+
+ my_enum = wrap_enum(my_enum)
+ my_enum.must_be.distinct
+
 h4. Boolean variables
 
 Boolean variables (which can either be true or false) are created using 
-@Model#bool_var@ and @Model#bool_var_array@, just like integer variables but 
-without the need for domains.
+@Model#bool_var@, @Model#bool_var_array@ and @Model#bool_var_matrix@, just like 
+integer variables but without the need for domains.
 
  bool = bool_var # Creates a boolean variable
  bools = bool_var_array(3) # Creates 3 boolean variables.
+ bool_matrix = bool_var_matrix(3, 4) # Creates a 3x4 matrix of boolean variables.
 
 h3. Constraints
 
